--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!schools-outreach.qmd"
+    - "!alberto-cairo.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -127,15 +127,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/editors-blog/posts/2023/07/27/schools-outreach.qmd">
+<a href="/viewpoints/interviews/posts/2023/08/01/alberto-cairo.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## 'Go out and talk about data science, particularly to schoolchildren'
-Open University professor Rachel Hilliam calls for data science outreach in schools, to build skills pipeline and plug gaps: 'There is absolutely no reason why we can’t excite children in a career in data science.' 
+## The many ‘dialects’ of data visualization: Alberto Cairo and ‘The Art of Insight’
+In his upcoming new book, journalist and designer Alberto Cairo explores the idea of 'data visualization as language', one with many different dialects -- statistical, journalistic, artistic, and so on. What might they learn from each other? 
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/editors-blog/posts/2023/07/27/images/kenny-eliason-zFSo6bnZJTw-unsplash.png)
+![](viewpoints/interviews/posts/2023/08/01/images/alberto-cairo.png)
 :::
 :::
 
@@ -170,11 +170,11 @@ Welcome to the home of **Real World Data Science**, a new project from the [Roya
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## To ensure the safe and responsible use of AI, the focus moving forward needs to be on the operationalisation of AI ethics into the day-to-day development lifecycle. But, what does this look like in practice? And how might you get started as an ethical AI practitioner? In this article, we unpack these questions and give you, the data scientist, a foundation to begin your journey towards trusted AI.
-How to translate AI ethics from theory into practice, by Maxine Setiawan and Mira Pijselman
+## Despite some stumbles, OpenAI’s 'junior programmer' presents a real step forward in the ChatGPT offering. At this stage, I would argue that Code Interpreter may be useful for quick summaries, visualisations and a little basic data cleaning and some preliminary investigations. However, based on what I’ve seen so far, it is clear to me that highly trained statisticians won’t be replaced anytime soon.
+Real World Data Science takes ChatGPT's Code Interpreter for a test drive 
 
 ::: {.button}
-[Learn more about Trusted AI](ideas/posts/2023/07/03/trusted-AI.qmd)
+[Explore the demo](viewpoints/editors-blog/posts/2023/07/19/code-interpreter.qmd)
 :::
 
 :::
@@ -212,11 +212,11 @@ How to translate AI ethics from theory into practice, by Maxine Setiawan and Mir
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## If you don’t understand the statistics involved in data science, make sure to upskill in that area before starting your first role. A lot of junior data scientists focus on learning how to code or get carried away with the modelling without first learning the importance of preparing the data in the correct way so that your predictions can work well in a real life setting.
-Chanuki Seresinhe, head of data science at Zoopla and Hometrack 
+## To ensure the safe and responsible use of AI, the focus moving forward needs to be on the operationalisation of AI ethics into the day-to-day development lifecycle. But, what does this look like in practice? And how might you get started as an ethical AI practitioner? In this article, we unpack these questions and give you, the data scientist, a foundation to begin your journey towards trusted AI.
+How to translate AI ethics from theory into practice, by Maxine Setiawan and Mira Pijselman
 
 ::: {.button}
-[Read Chanuki's career profile](careers/career-profiles/posts/2023/06/20/chanuki-seresinhe.qmd)
+[Learn more about Trusted AI](ideas/posts/2023/07/03/trusted-AI.qmd)
 :::
 
 :::
