--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!alberto-cairo.qmd"
+    - "!jsm-blog.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -75,21 +75,9 @@ listing:
     max-items: 3
     feed: false
 
-  - id: editors-blog
-    contents: 
-    - /viewpoints/editors-blog
-    - "!index.qmd"
-    sort: "date desc"
-    type: grid
-    categories: false
-    sort-ui: false
-    filter-ui: false
-    max-items: 3
-    feed: false
-
-  # - id: datasciencebites
+  # - id: editors-blog
   #   contents: 
-  #   - /ideas/datasciencebites
+  #   - /viewpoints/editors-blog
   #   - "!index.qmd"
   #   sort: "date desc"
   #   type: grid
@@ -98,6 +86,18 @@ listing:
   #   filter-ui: false
   #   max-items: 3
   #   feed: false
+
+  - id: datasciencebites
+    contents: 
+    - /ideas/datasciencebites
+    - "!index.qmd"
+    sort: "date desc"
+    type: grid
+    categories: false
+    sort-ui: false
+    filter-ui: false
+    max-items: 3
+    feed: false
 
   # - id: interviews
   #   contents: 
@@ -127,15 +127,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/interviews/posts/2023/08/01/alberto-cairo.qmd">
+<a href="/viewpoints/editors-blog/posts/2023/08/06/jsm-blog.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## The many ‘dialects’ of data visualization: Alberto Cairo and ‘The Art of Insight’
-In his upcoming new book, journalist and designer Alberto Cairo explores the idea of 'data visualization as language', one with many different dialects -- statistical, journalistic, artistic, and so on. What might they learn from each other? 
+## Live from Toronto: Real World Data Science at the Joint Statistical Meetings
+We're in Toronto for this year's Joint Statistical Meetings (JSM). Over the next few days, we'll be sharing key takeaways from a selection of talks and sessions. Check back regularly for updates. 
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/interviews/posts/2023/08/01/images/alberto-cairo.png)
+![](viewpoints/editors-blog/posts/2023/08/06/images/toronto-waterfront.png)
 :::
 :::
 
@@ -183,12 +183,12 @@ Real World Data Science takes ChatGPT's Code Interpreter for a test drive
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="careers/index.qmd">
+<a href="ideas/datasciencebites/index.qmd">
 
-## Data Science Careers 
-</a>
+## Data Science Bites
+</a> 
 
-::: {#careers}
+::: {#datasciencebites}
 :::
 
 :::
@@ -196,12 +196,12 @@ Real World Data Science takes ChatGPT's Code Interpreter for a test drive
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="careers/career-profiles/index.qmd">
+<a href="careers/index.qmd">
 
-## Career profiles 
+## Data Science Careers 
 </a>
 
-::: {#career-profiles}
+::: {#careers}
 :::
 
 :::
@@ -225,12 +225,12 @@ How to translate AI ethics from theory into practice, by Maxine Setiawan and Mir
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="viewpoints/index.qmd">
+<a href="careers/career-profiles/index.qmd">
 
-## Viewpoints 
+## Career profiles 
 </a>
 
-::: {#viewpoints}
+::: {#career-profiles}
 :::
 
 :::
@@ -238,12 +238,12 @@ How to translate AI ethics from theory into practice, by Maxine Setiawan and Mir
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="viewpoints/editors-blog/index.qmd">
+<a href="viewpoints/index.qmd">
 
-## Editors' Blog
-</a> 
+## Viewpoints 
+</a>
 
-::: {#editors-blog}
+::: {#viewpoints}
 :::
 
 :::
