--- a/viewpoints/editors-blog/posts/2023/08/06/jsm-blog.qmd
+++ b/viewpoints/editors-blog/posts/2023/08/06/jsm-blog.qmd
@@ -15,18 +15,18 @@ image-alt: Toronto waterfront, showing CN Tower and other buildings.
 ### Use of color in statistical charts
 *Haley Jeppson, Danielle Albers Szafir, and Ian Lyttle*
 
-JSM 2023 is underway, and the first session I attended today was this panel on the use of color in statistical charts.
+JSM 2023 is underway, and the first session I attended today was this panel on the use of colour in statistical charts.
 
 The topic appealed to me for two reasons:
 
-1. Before my trip to Toronto, I interviewed [Alberto Cairo about the many "dialects" of data visualisation](https://realworlddatascience.net/viewpoints/interviews/posts/2023/08/01/alberto-cairo.html).
-2. I've recently been working with Andreas Krause and Nicola Rennie to create new guidance for improving statistical graphics, titled "[Best Practices for Data Visualisation](https://royal-statistical-society.github.io/datavisguide/)".
+- Before my trip to Toronto, I interviewed [Alberto Cairo about the many "dialects" of data visualisation](https://realworlddatascience.net/viewpoints/interviews/posts/2023/08/01/alberto-cairo.html).
+- I've recently been working with Andreas Krause and Nicola Rennie to create new guidance for improving statistical graphics, titled "[Best Practices for Data Visualisation](https://royal-statistical-society.github.io/datavisguide/)".
 
 The "Best Practices..." guide links to several useful data visualisation tools, and this session today has put a few more on my radar:
 
 - [Color Crafting](https://cmci.colorado.edu/visualab/ColorCrafting/), by Stephen Smart, Keke Wu, and Danielle Albers Szafir. The authors write: "Visualizations often encode numeric data using sequential and diverging color ramps. Effective ramps use colors that are sufficiently discriminable, align well with the data, and are aesthetically pleasing. Designers rely on years of experience to create high-quality color ramps. However, it is challenging for novice visualization developers that lack this experience to craft effective ramps as most guidelines for constructing ramps are loosely defined qualitative heuristics that are often difficult to apply. Our goal is to enable visualization developers to readily create effective color encodings using a single seed color."
 
-- [Computing on color](https://observablehq.com/collection/@ijlyttle/color), a collection of Observable notebooks by Ian Lyttle that allows users to see how different colour spaces and colour scales work with different types of colour vision deficiency.
+- [Computing on color](https://observablehq.com/collection/@ijlyttle/color), a collection of Observable notebooks by Ian Lyttle that allow users to see how different colour spaces and colour scales work with different types of colour vision deficiency.
 
 ::: {.article-btn}
 [Back to Editors' blog](/viewpoints/editors-blog/index.qmd)
