--- a/viewpoints/editors-blog/posts/2023/08/06/jsm-blog.qmd
+++ b/viewpoints/editors-blog/posts/2023/08/06/jsm-blog.qmd
@@ -8,8 +8,8 @@ categories:
 author: Brian Tarran
 date: last-modified
 toc: true
-image: images/toronto-waterfront.png
-image-alt: Toronto waterfront, showing CN Tower and other buildings.
+image: images/james-webb.png
+image-alt: Image from the James Webb telescope showing two galaxies in the process of merging, twisting each other out of shape.
 ---
 ## Sunday, August 6
 ### Use of color in statistical charts
@@ -28,6 +28,18 @@ The "Best Practices..." guide links to several useful data visualisation tools, 
 
 - [Computing on color](https://observablehq.com/collection/@ijlyttle/color), a collection of Observable notebooks by Ian Lyttle that allows users to see how different colour spaces and colour scales work with different types of colour vision deficiency.
 
+## Monday, August 7
+### Astronomers Speak Statistics
+Astrophysicist Joel Leja kicked off his JSM talk with a video of the launch of the James Webb Space Telescope -- an inspiring way to start the day, and a prelude to a discussion of the statistical challenges involved in studying the deep universe.
+
+James Webb, since launch, has "completely expanded our point of view", said Leja, allowing astronomers to explore the first stars and galaxies at greater resolution than ever before.
+
+![Image from the James Webb telescope showing two galaxies in the process of merging, twisting each other out of shape. Credit: ESA/Webb, NASA & CSA, L. Armus, A. Evan.](images/james-webb.png){fig-alt="Image from the James Webb telescope showing two galaxies in the process of merging, twisting each other out of shape." width="500px"}
+
+Already, after only 13 months of operation, the images and data sent back by the telescope have left observers astounded: for example, finding suspected early galaxies that are bigger than thought possible based on extreme value analysis.
+
+But the big challenge facing those studying the early universe is trying to work out how early galaxies evolved over time. "We can't watch this happen," said Leja, joking that this process lasts longer than a typical PhD. So, instead, he said, "We need to use statistics to understand this, to figure out how they grow up."
+
 ::: {.article-btn}
 [Back to Editors' blog](/viewpoints/editors-blog/index.qmd)
 :::
@@ -38,7 +50,7 @@ The "Best Practices..." guide links to several useful data visualisation tools, 
 Copyright and licence
 : &copy; 2023 Royal Statistical Society
 
-<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>. Thumbnail photo by Brian Tarran, licenced under CC BY 4.0.
+<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>. Thumbnail photo credit: ESA/Webb, NASA & CSA, L. Armus, A. Evan, licenced under <a href="https://creativecommons.org/licenses/by/2.0/">CC BY 2.0</a>.
   
 :::
 
