Update #4: Next 50 years of Data Science

--- a/viewpoints/editors-blog/posts/2023/08/06/jsm-blog.qmd
+++ b/viewpoints/editors-blog/posts/2023/08/06/jsm-blog.qmd
@@ -8,8 +8,8 @@ categories:
 author: Brian Tarran
 date: last-modified
 toc: true
-image: images/james-webb.png
-image-alt: Image from the James Webb telescope showing two galaxies in the process of merging, twisting each other out of shape.
+image: images/donoho-talk.png
+image-alt: Photo of David Donoho slide, describing the scientific revolution of the 'data science decade'.
 ---
 ## Sunday, August 6
 ### Use of color in statistical charts
@@ -34,7 +34,7 @@ Astrophysicist Joel Leja kicked off his JSM talk with a video of the launch of t
 
 James Webb, since launch, has "completely expanded our point of view", said Leja, allowing astronomers to explore the first stars and galaxies at greater resolution than ever before.
 
-![Image from the James Webb telescope showing two galaxies in the process of merging, twisting each other out of shape. Credit: ESA/Webb, NASA & CSA, L. Armus, A. Evan.](images/james-webb.png){fig-alt="Image from the James Webb telescope showing two galaxies in the process of merging, twisting each other out of shape." width="500px"}
+![Image from the James Webb telescope showing two galaxies in the process of merging, twisting each other out of shape. Credit: ESA/Webb, NASA & CSA, L. Armus, A. Evan, licenced under CC BY 2.0.](images/james-webb.png){fig-alt="Image from the James Webb telescope showing two galaxies in the process of merging, twisting each other out of shape." width="500px"}
 
 Already, after only 13 months of operation, the images and data sent back by the telescope have left observers astounded: for example, finding suspected early galaxies that are bigger than thought possible based on extreme value analysis.
 
@@ -55,6 +55,26 @@ Students were given four factors that might influence browsing time -- tile size
 
 The response from the students? Two Netflix-style thumbs up. Ta-dum!
 
+## Tuesday, August 8
+### The Next 50 Years of Data Science
+Stanford University's David Donoho wrestled with the question of whether a singularity is approaching in this post-lunch session on the future of data science.
+
+Taking his cue from the 2005 Ray Kurzweil book, *The Singularity is Near*, Donoho reviewed recent -- and sometimes rapid -- advances in data science and artificial intelligence to argue that a singularity may have already arrived, just not in the way Kurzweil supposed.
+
+Kurzweil's book argues that at some point after the 2030s, machine intelligence will supersede human intelligence, leading to a takeover or disruption of life as we know it. 
+
+At JSM, Donoho argued that we have certainly seen a "massive scaling" of compute over the past decade, along with expanded communications infrastructure and the wider spread of information -- all of which is having an impact on human behaviour. 
+
+That human behaviour can often now be directly measured thanks to the proliferation of digital devices with data collection capabilities, and this in turn is leading to a major scaling in data sets and performance scaling for machine learning models.
+
+But does this mean that an AI singularity is near? Not according to Donoho. The notion of an AI singularity "is a kind of misdirection", he said. Something very profound is happening, Donoho argued, and it is the culmination of three long-term initiatives in data science that have come together in recent years. "They constitute a singularity on their own."
+
+These three initiatives, as Donoho described, are: datafication and data sharing; adherence to the "challenge problem" paradigm; and documentation and sharing of code. These are solid achievements that came out of the last decade, said Donoho, and they are "truly revolutionary" when they come together to form what he refers to as "frictionless reproducibility."
+
+[![Photo of David Donoho's slide, describing the scientific revolution of the "data science decade". Photo by Brian Tarran, licenced under CC BY 4.0](images/donoho-talk.png)](images/donoho-talk.png){fig-alt="Slide text reads: Today's data scientists: typical interactions: What's your package name? What's your URL? QR Code? What's your stack? Today's data scientists: implicit demands: Data sharing, Specific numerical performance measures, Code sharing, Single-click access. Frictionless replications." width="500px"}
+
+Frictionless reproducibility, when achieved, leads to a "reproducibility singularity" -- the moment where it takes almost no time at all for an idea to spread. "If there is an AI singularity," said Donoho, "it will be because this came first."
+
 ::: {.article-btn}
 [Back to Editors' blog](/viewpoints/editors-blog/index.qmd)
 :::
@@ -65,13 +85,13 @@ The response from the students? Two Netflix-style thumbs up. Ta-dum!
 Copyright and licence
 : &copy; 2023 Royal Statistical Society
 
-<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>. Thumbnail photo credit: ESA/Webb, NASA & CSA, L. Armus, A. Evan, licenced under <a href="https://creativecommons.org/licenses/by/2.0/">CC BY 2.0</a>.
+<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>.
   
 :::
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Tarran, Brian. 2023. "Live from Toronto: Real World Data Science at the Joint Statistical Meetings." Real World Data Science, August 6, 2023, updated August 7, 2023. [URL](https://realworlddatascience.net/viewpoints/editors-blog/posts/2023/08/06/jsm-blog.html)
+: Tarran, Brian. 2023. "Live from Toronto: Real World Data Science at the Joint Statistical Meetings." Real World Data Science, August 6, 2023, updated August 8, 2023. [URL](https://realworlddatascience.net/viewpoints/editors-blog/posts/2023/08/06/jsm-blog.html)
 :::
 :::
 :::
