Update #5: Data poisoning

--- a/viewpoints/editors-blog/posts/2023/08/06/jsm-blog.qmd
+++ b/viewpoints/editors-blog/posts/2023/08/06/jsm-blog.qmd
@@ -8,8 +8,8 @@ categories:
 author: Brian Tarran
 date: last-modified
 toc: true
-image: images/donoho-talk.png
-image-alt: Photo of David Donoho slide, describing the scientific revolution of the 'data science decade'.
+image: images/data-hazards.png
+image-alt: A person is illustrated in a warm, cartoon-like style in green. They are looking up thoughtfully from the bottom left at a large hazard symbol in the middle of the image. The hazard symbol is a bright orange square tilted 45 degrees, with a black and white illustration of an exclamation mark in the middle where the exclamation mark shape is made up of tiny 1s and 0s like binary code. To the right-hand side of the image a small character made of lines and circles (like nodes and edges on a graph) is standing with its ‘arms’ and ‘legs’ stretched out, and two antenna sticking up. It faces off to the right-hand side of the image.
 ---
 ## Sunday, August 6
 ### Use of color in statistical charts
@@ -75,6 +75,20 @@ These three initiatives, as Donoho described, are: datafication and data sharing
 
 Frictionless reproducibility, when achieved, leads to a "reproducibility singularity" -- the moment where it takes almost no time at all for an idea to spread. "If there is an AI singularity," said Donoho, "it will be because this came first."
 
+## Wednesday, August 9
+### New frontiers of statistics in trustworthy machine learning
+Data, data everywhere, but is it safe to "drink"? A presentation this morning from Yaoliang Yu of the University of Waterloo looked at the issue of data poisoning attacks on algorithms and the effectiveness of current approaches. 
+
+Yu began by explaining how machine learning algorithms require a lot of data for training, and that large amounts of data can be obtained cheaply by scraping the web.
+
+But, he said, when researchers download this cheap data, they are bound to worry about the quality of it. Drawing an analogy to food poisoning, Yu asked: What if the data we "feed" to algorithms is not clean? What is the impact of that?
+
+As a real-world example of a data poisoning attack, Yu pointed to TayTweets, the Microsoft Twitter chatbot that spewed racism within hours of launch [after Twitter users began engaging with it](https://www.theverge.com/2016/3/24/11297050/tay-microsoft-chatbot-racist).
+
+Yu then walked delegates through some experiments showing how, generally, indiscriminate data poisoning attacks are ineffective when the ratio of poisoned data to clean data is small. A poisoning rate of 3%, for example, leads to model accuracy drops of 1.5%--2%, Yu said.
+
+However, he then put forward the idea of "parameter corruption" -- an attack that seeks to modify a model directly. Yu showed that this would be more effective in terms of accuracy loss, though -- fortunately -- perhaps less practical to implement.
+
 ::: {.article-btn}
 [Back to Editors' blog](/viewpoints/editors-blog/index.qmd)
 :::
@@ -85,13 +99,13 @@ Frictionless reproducibility, when achieved, leads to a "reproducibility singula
 Copyright and licence
 : &copy; 2023 Royal Statistical Society
 
-<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>.
+<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>. Thumbnail image by <a href="yasmindwiputri.com">Yasmin Dwiputri</a> & <a href="Datahazards.com">Data Hazards Project</a> / <a href="https://www.betterimagesofai.org">Better Images of AI</a> / Managing Data Hazards / <a href="https://creativecommons.org/licenses/by/4.0/">Licenced by CC-BY 4.0</a>.
   
 :::
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Tarran, Brian. 2023. "Live from Toronto: Real World Data Science at the Joint Statistical Meetings." Real World Data Science, August 6, 2023, updated August 8, 2023. [URL](https://realworlddatascience.net/viewpoints/editors-blog/posts/2023/08/06/jsm-blog.html)
+: Tarran, Brian. 2023. "Live from Toronto: Real World Data Science at the Joint Statistical Meetings." Real World Data Science, August 6, 2023, updated August 9, 2023. [URL](https://realworlddatascience.net/viewpoints/editors-blog/posts/2023/08/06/jsm-blog.html)
 :::
 :::
 :::
