--- a/viewpoints/editors-blog/posts/2023/08/06/jsm-blog.qmd
+++ b/viewpoints/editors-blog/posts/2023/08/06/jsm-blog.qmd
@@ -71,7 +71,7 @@ But does this mean that an AI singularity is near? Not according to Donoho. The 
 
 These three initiatives, as Donoho described, are: datafication and data sharing; adherence to the "challenge problem" paradigm; and documentation and sharing of code. These are solid achievements that came out of the last decade, said Donoho, and they are "truly revolutionary" when they come together to form what he refers to as "frictionless reproducibility."
 
-[![Photo of David Donoho's slide, describing the scientific revolution of the "data science decade". Photo by Brian Tarran, licenced under CC BY 4.0](images/donoho-talk.png)](images/donoho-talk.png){fig-alt="Slide text reads: Today's data scientists: typical interactions: What's your package name? What's your URL? QR Code? What's your stack? Today's data scientists: implicit demands: Data sharing, Specific numerical performance measures, Code sharing, Single-click access. Frictionless replications." width="500px"}
+[![Photo of David Donoho's slide, describing the scientific revolution of the "data science decade". Photo by Brian Tarran, licenced under CC BY 4.0.](images/donoho-talk.png){fig-alt="Slide text reads: Today's data scientists: typical interactions: What's your package name? What's your URL? QR Code? What's your stack? Today's data scientists: implicit demands: Data sharing, Specific numerical performance measures, Code sharing, Single-click access. Frictionless replications." width="500px"}](images/donoho-talk.png)
 
 Frictionless reproducibility, when achieved, leads to a "reproducibility singularity" -- the moment where it takes almost no time at all for an idea to spread. "If there is an AI singularity," said Donoho, "it will be because this came first."
 
@@ -99,7 +99,7 @@ However, he then put forward the idea of "parameter corruption" -- an attack tha
 Copyright and licence
 : &copy; 2023 Royal Statistical Society
 
-<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>. Thumbnail image by <a href="yasmindwiputri.com">Yasmin Dwiputri</a> & <a href="Datahazards.com">Data Hazards Project</a> / <a href="https://www.betterimagesofai.org">Better Images of AI</a> / Managing Data Hazards / <a href="https://creativecommons.org/licenses/by/4.0/">Licenced by CC-BY 4.0</a>.
+<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>. Thumbnail image by <a href="yasmindwiputri.com">Yasmin Dwiputri</a> & <a href="Datahazards.com">Data Hazards Project</a> / <a href="https://www.betterimagesofai.org">Better Images of AI</a> / Managing Data Hazards / <a href="https://creativecommons.org/licenses/by/4.0/">Licenced by CC BY 4.0</a>.
   
 :::
 
