Second url fix for Better Images of AI

--- a/viewpoints/editors-blog/posts/2023/08/06/jsm-blog.qmd
+++ b/viewpoints/editors-blog/posts/2023/08/06/jsm-blog.qmd
@@ -99,7 +99,7 @@ However, he then put forward the idea of "parameter corruption" -- an attack tha
 Copyright and licence
 : &copy; 2023 Royal Statistical Society
 
-<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>. Thumbnail image by <a href="https://www.yasmindwiputri.com">Yasmin Dwiputri</a> & <a href="https://www.datahazards.com">Data Hazards Project</a> / <a href="https://www.betterimagesofai.org">Better Images of AI</a> / Managing Data Hazards / <a href="https://creativecommons.org/licenses/by/4.0/">Licenced by CC BY 4.0</a>.
+<a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img style="height:22px!important;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>. Thumbnail image by <a href="http://www.yasmindwiputri.com">Yasmin Dwiputri</a> & <a href="https://www.datahazards.com">Data Hazards Project</a> / <a href="https://www.betterimagesofai.org">Better Images of AI</a> / Managing Data Hazards / <a href="https://creativecommons.org/licenses/by/4.0/">Licenced by CC BY 4.0</a>.
   
 :::
 
