--- a/index.qmd
+++ b/index.qmd
@@ -132,10 +132,10 @@ toc: false
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
 ## Live from Toronto: Real World Data Science at the Joint Statistical Meetings
-We're in Toronto for this year's Joint Statistical Meetings (JSM). Over the next few days, we'll be sharing key takeaways from a selection of talks and sessions. Check back regularly for updates. 
+This year's Joint Statistical Meetings (JSM) has come to a close, but you can still discover key takeaways from a selection of talks and sessions in our live JSM blog -- featuring Google, the James Webb Space Telescope, Netflix job ads, and the next 50 years of data science!
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/editors-blog/posts/2023/08/06/images/data-hazards.png)
+![](viewpoints/editors-blog/posts/2023/08/06/images/google-sign.png)
 :::
 :::
 
