--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!jsm-blog.qmd"
+    - "!data-science-and-games.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -61,19 +61,19 @@ listing:
     max-items: 3
     feed: false
 
-  - id: viewpoints
-    contents: 
-    - /viewpoints/posts
-    - /viewpoints/interviews
-    - "!index.qmd"
-    - "!london-data-week.qmd"
-    sort: "date desc"
-    type: grid
-    categories: false
-    sort-ui: false
-    filter-ui: false
-    max-items: 3
-    feed: false
+  # - id: viewpoints
+  #   contents: 
+  #   - /viewpoints/posts
+  #   - /viewpoints/interviews
+  #   - "!index.qmd"
+  #   - "!london-data-week.qmd"
+  #   sort: "date desc"
+  #   type: grid
+  #   categories: false
+  #   sort-ui: false
+  #   filter-ui: false
+  #   max-items: 3
+  #   feed: false
 
   # - id: editors-blog
   #   contents: 
@@ -99,17 +99,18 @@ listing:
     max-items: 3
     feed: false
 
-  # - id: interviews
-  #   contents: 
-  #   - /viewpoints/interviews
-  #   - "!index.qmd"
-  #   sort: "date desc"
-  #   type: grid
-  #   categories: false
-  #   sort-ui: false
-  #   filter-ui: false
-  #   max-items: 3
-  #   feed: false
+  - id: interviews
+    contents: 
+    - /viewpoints/interviews
+    - "!index.qmd"
+    - "!london-data-week.qmd"
+    sort: "date desc"
+    type: grid
+    categories: false
+    sort-ui: false
+    filter-ui: false
+    max-items: 3
+    feed: false
 
   - id: career-profiles
     contents: 
@@ -127,15 +128,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/editors-blog/posts/2023/08/06/jsm-blog.qmd">
+<a href="/viewpoints/posts/2023/08/17/data-science-and-games.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Live from Toronto: Real World Data Science at the Joint Statistical Meetings
-This year's Joint Statistical Meetings (JSM) has come to a close, but you can still discover key takeaways from a selection of talks and sessions in our live JSM blog -- featuring Google, the James Webb Space Telescope, Netflix job ads, and the next 50 years of data science!
+## Where do AI, data science, and computer games intersect?
+Game studios have cemented their place among the fastest-growing media industries. Alice-Maria Toader and Liam Brierley report on two recent talks that explore the role of AI and data science in video game development.
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/editors-blog/posts/2023/08/06/images/google-sign.png)
+![](viewpoints/posts/2023/08/17/images/sega-store.png)
 :::
 :::
 
@@ -238,12 +239,12 @@ How to translate AI ethics from theory into practice, by Maxine Setiawan and Mir
 
 ::: {.content-container}
 ::: {.listing-block}
-<a href="viewpoints/index.qmd">
+<a href="viewpoints/interviews/index.qmd">
 
-## Viewpoints 
+## Interviews 
 </a>
 
-::: {#viewpoints}
+::: {#interviews}
 :::
 
 :::
