--- a/viewpoints/editors-blog/posts/2023/08/06/jsm-blog.qmd
+++ b/viewpoints/editors-blog/posts/2023/08/06/jsm-blog.qmd
@@ -6,7 +6,7 @@ categories:
   - Conferences
   - Events
 author: Brian Tarran
-date: last-modified
+date: 08/15/2023
 toc: true
 image: images/google-sign.png
 image-alt: Google logo on top of building, against a blue sky.
