--- a/case-studies/posts/2023/08/21/00-food-for-thought.qmd
+++ b/case-studies/posts/2023/08/21/00-food-for-thought.qmd
@@ -1,32 +1,32 @@
 ---
 title: "The Food for Thought Challenge: Using AI to support evidence-based food and nutrition policy"
-# description: |
-#   Stephanie Hare, author of 'Technology is Not Neutral', talks to Real World Data Science about the 'wicked problem' of technology and AI ethics, and why laws and regulations are 'necessary but insufficient' to minimise harms. 'We’re going to have to inculcate an entire new mindset,' she argues.        
+description: |
+  Brian Tarran and Julia Lane introduce a collection of articles telling the story of the Food for Thought Challenge, which sought to use machine learning and natural language processing to more efficiently link data on food purchases to nutritional information.       
 categories:
-  # - Technology ethics
-  # - AI ethics
-  # - Culture
-  # - Regulation
+  - Machine learning
+  - Natural language processing
+  - Public policy
+  - Health and wellbeing
 author: Brian Tarran and Julia Lane
-date: 05/XX/2023
+date: 08/21/2023
 toc: false
 # image: images/stephanie-hare-bw.png
 # image-alt: Photo of Stephanie Hare by Mitzi de Margary. Photo supplied by Stephanie Hare, used with permission.
-format:
-  html:
-    embed-resources: true  
+# format:
+#   html:
+#     embed-resources: true  
 ---
-There’s a saying: “You are what you eat.” Its meaning is somewhat open to interpretation, as with many such sayings, but it’s typically used to make the point that if you want to *be* well, you need to eat well. Nutrition scientists and dieticians spend their careers trying to figure out what “eating well” looks like – the foods the human body needs, in what quantities, and how best to consume them. Their research informs advice and guidance issued by health professionals and governments. Ultimately, though, the choice of what to eat falls to us – individuals and families – and that choice is, in turn, informed by our tastes, the availability of foodstuffs in our local stores, and their price and affordability.
+There’s a saying: “You are what you eat.” Its meaning is somewhat open to interpretation, as with many such sayings, but it is typically used to make the point that if you want to *be* well, you need to eat well. Nutrition scientists and dieticians spend their careers trying to figure out what “eating well” looks like – the foods the human body needs, in what quantities, and how best to consume them. Their research informs advice and guidance issued by health professionals and governments. Ultimately, though, the choice of what to eat falls to us – individuals and families – and our choices are often determined by our tastes, the availability of foodstuffs in our local stores, their price and affordability.
 
-So, what exactly *do* we eat? Answers come from a variety of sources. In the United States, there are dietary recall studies like the [National Health and Nutrition Examination Survey](https://www.cdc.gov/nchs/nhanes/index.htm), which asks a sample of respondents to report their food and beverage consumption over a set period of time. There are also organisations like [IRI](https://www.iriworldwide.com/en-gb) that collect scanner data, or “point-of-sale data”, from retail stores on the actual food and drink being sold to consumers.
+So, what exactly *do* we eat? Answers come from a variety of sources. In the United States, there are dietary recall studies such as the [National Health and Nutrition Examination Survey](https://www.cdc.gov/nchs/nhanes/index.htm), which asks a sample of respondents to report their food and beverage consumption over a set period of time. There are also organisations like [IRI](https://www.iriworldwide.com/en-gb) that collect point-of-sale data from retail stores on the actual food and drink being sold to consumers. By and large, this information comes from barcodes on product packaging being scanned at checkouts, so it is often referred to as "scanner data". 
 
-This data – from recall studies and scanners – is valuable. Once we know what people are eating, we can check the nutritional content of those foods and build up a picture of what the diet of a typical individual or family looks like and how it compares to the diet recommended by doctors and policymakers. And, if we know what other foodstuffs are available, how much they cost, and the nutritional value of those items, we can work out how much families need to spend, and on what, in order to eat well and, hopefully, be well.
+This data – from dietary recall studies and retail scanners – is valuable: once we know what people are eating, we can check the nutritional content of those foods and build up a picture of what the diet of a typical individual or family looks like and how it compares to the diet recommended by doctors and policymakers. And, if we know what other foodstuffs are available, how much they cost, and the nutritional value of those items, we can work out how much families need to spend, and on what, in order to eat well and, hopefully, be well.
 
-Figuring all this out is where something called the Purchase to Plate Crosswalk (PPC) comes in. It’s a key tool for understanding the “[healthfulness of retail food purchases](https://www.sciencedirect.com/science/article/pii/S0889157521005445)” and it does this by matching IRI scanner data on what people buy with data on the nutritional content of those foods, as recorded in the US Department of Agriculture’s Food and Nutrient Database for Dietary Studies (FNDDS). But there’s a catch: scanner data is collected about hundreds of thousands of food products, whereas the FNDDS has nutritional profile information for only a few thousand items. Linking these two datasets therefore gives rise to a one-to-many matching problem – a problem that takes several hundred person-hours to resolve.
+Figuring all this out is where something called the Purchase to Plate Crosswalk (PPC) comes in. It’s a key tool for understanding the “[healthfulness of retail food purchases](https://www.sciencedirect.com/science/article/pii/S0889157521005445)” and it does this by linking IRI scanner data on what people buy with data on the nutritional content of those foods, as recorded in the US Department of Agriculture’s Food and Nutrient Database for Dietary Studies (FNDDS). But there’s a catch: scanner data is collected about hundreds of thousands of food products, whereas the FNDDS has nutritional profile information for only a few thousand items. Linking these two datasets therefore gives rise to a one-to-many matching problem – a problem that takes several hundred person-hours to resolve.
 
-But what if machine learning can help? That question inspired a competition, the Food for Thought Challenge, organized by the Coleridge Initiative, a nonprofit organization working with governments to ensure that data are more effectively used for public decision-making. Researchers and data scientists were invited to use machine learning and natural language processing to more efficiently link data on supermarket products to nutrient databases.
+What if machine learning can help? That question inspired a competition, the Food for Thought Challenge, organized by the Coleridge Initiative, a nonprofit organization working with governments to ensure that data are more effectively used for public decision-making. Researchers and data scientists were invited to use machine learning and natural language processing to more efficiently link data on supermarket products to nutrient databases.
 
-This special collection of articles tells the story of the Food for Thought Challenge. We begin by exploring the [policy issues](/case-studies/posts/2023/05/XX/01-purchase-to-plate.qmd) that drive the development of the PPC – the need to understand the national diet, developing healthy diet plans, and costing up those plans – and the issues posed by record linkage. Next, we learn about [the nature of the challenge and the structure of the competition in more detail](/case-studies/posts/2023/05/XX/02-competition-design.qmd), and then the [three](/case-studies/posts/2023/05/XX/03-first-place-winners.qmd) [winning](/case-studies/posts/2023/05/XX/04-second-place-winners.qmd) [teams](/case-studies/posts/2023/05/XX/05-third-place-winners.qmd) walk us through their solutions. We end the collection with some closing thoughts on [the value of competitions for addressing data scientific challenges in the public sector](/case-studies/posts/2023/05/XX/06-value-of-competitions.qmd).
+This collection of articles tells the story of the [Food for Thought Challenge](https://coleridgeinitiative.org/projects/food-for-thought). We begin by exploring the [policy issues](/case-studies/posts/2023/08/21/01-purchase-to-plate.qmd) that drive the development of the PPC – the need to understand the national diet, developing healthy diet plans, and costing up those plans – and the issues posed by record linkage. Next, we learn about [the nature of the challenge and the structure of the competition in more detail](/case-studies/posts/2023/08/21/02-competition-design.qmd), and then the [three](/case-studies/posts/2023/08/21/03-first-place-winners.qmd) [winning](/case-studies/posts/2023/08/21/04-second-place-winners.qmd) [teams](/case-studies/posts/2023/08/21/05-third-place-winners.qmd) walk us through their solutions. We end the collection with some closing thoughts on [the value of competitions for addressing data scientific challenges in the public sector](/case-studies/posts/2023/08/21/06-value-of-competitions.qmd).
 
 ::: grid
 ::: {.g-col-12 .g-col-md-6}
@@ -37,7 +37,7 @@ This special collection of articles tells the story of the Food for Thought Chal
 
 ::: {.g-col-12 .g-col-md-6}
 ::: article-btn
-[Part 1: The Purchase to Plate Suite &rarr;](/case-studies/posts/2023/05/XX/01-purchase-to-plate.qmd)
+[Part 1: The Purchase to Plate Suite &rarr;](/case-studies/posts/2023/08/21/01-purchase-to-plate.qmd)
 :::
 :::
 :::
@@ -52,20 +52,15 @@ About the authors
 :::
 
 ::: {.g-col-12 .g-col-md-6}
-
 Copyright and licence
-
 :   © 2023 Royal Statistical Society and Julia Lane
 
 <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" style="height:22px!important;vertical-align:text-bottom;"/><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" style="height:22px!important;margin-left:3px;vertical-align:text-bottom;"/></a> This article is licensed under a Creative Commons Attribution 4.0 (CC BY 4.0) <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;"> International licence</a>.
 
 :::
-
 ::: {.g-col-12 .g-col-md-6}
-
 How to cite
-
-:   Tarran, Brian, and Julia Lane. 2023. "The Food for Thought Challenge: Using AI to support evidence-based food and nutrition policy." Real World Data Science, May XX, 2023. [URL](https://realworlddatascience.net/viewpoints/case-studies/posts/2023/05/XX/00-food-for-thought.html)
+:   Tarran, Brian, and Julia Lane. 2023. "The Food for Thought Challenge: Using AI to support evidence-based food and nutrition policy." Real World Data Science, August 21, 2023. [URL](https://realworlddatascience.net/viewpoints/case-studies/posts/2023/08/21/00-food-for-thought.html)
 :::
 :::
 :::
